# rust-webassembly-practise

./: .gitignore  Cargo.toml  LICENSE_MIT
src/: lib.rs
