[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["SeonHyungJo <seonhyung.jo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen-futures = "0.4.29"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"]  }
console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = { version = "0.4.5", optional = true }
reqwest = { version = "0.11", features = ["json"] }
js-sys = "0.3.56"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]



